# Time-Series

./: CMakeLists.txt  Makefile  README.md  arfima.f90  arima2.f90  arma.f90  astsa.f90  automatic_modeling.f90  automatic_volatility.f90  bayesforecast.f90  bayesian_time_series.f90  baystar.f90  bentcablear.f90  bigtime.f90  bigvar.f90  bssm.f90  bsts.f90  bvar.f90  bvars.f90  bvarsv.f90  bvartools.f90  calendar.f90  count_time_series.f90  diagnostics.f90  distribution.f90  distribution_fit.f90  echos.f90  esemifar.f90  expar.f90  exparma.f90  fcvar.f90  ford.md  forecast.f90  forecasting.f90  fourier.f90  fracdiff.f90  fracdist.f90  functional_time_series.f90  garma.f90  gmdh.f90  (+123 more)
.github/workflows/: ford-pages.yml
examples/: var2_fit.f90
licenses/: LICENSE-BAYSTAR  LICENSE-BENTCABLEAR  LICENSE-BIGTIME  LICENSE-BIGVAR  LICENSE-BSSM  LICENSE-BSTS  LICENSE-BVARS  LICENSE-BVARTOOLS  LICENSE-ECHOS  LICENSE-EXPAR  LICENSE-EXPARMA  LICENSE-FCVAR  LICENSE-FRACDIST  LICENSE-GMDH  LICENSE-MIXAR  LICENSE-MSWM  LICENSE-MTS  LICENSE-NARFIMA  LICENSE-NLINTS  LICENSE-NNFOR  LICENSE-NTS  LICENSE-ROBUSTARIMA  LICENSE-RUGARCH  LICENSE-SETARTREE  LICENSE-STARVARS  LICENSE-TSANN  LICENSE-TSERIESTARMA  LICENSE-TSLSTMPLUS  LICENSE-UGMAR  LICENSE-VAR-ETP  LICENSE-VARS  LICENSE-VARSHRINK
tools/: document_fortran_arguments.py  extract_fracdist_tables.R  fortran_style_audit.py  generate_makefile.py  generate_tseriestarma_critical_values.R  test_fortran_style_audit.py  ts_auto_reference.R
